--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,23 @@
 
     <!-- ✅ 앱 로직 -->
     <script defer src="app.js"></script>
+  <!-- ✅ QR 이미지용 스타일 -->
+    <style>
+      #qr-fixed {
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        width: 100px;
+        height: 100px;
+        z-index: 9999;
+        opacity: 0.9;
+      }
+    </style>
   </head>
   <body>
+    <!-- ✅ QR 이미지 고정 위치 -->
+    <img src="TasteOfKorea_app_QR.png" id="qr-fixed" alt="QR코드" />
+
     <!-- 모든 UI는 app.js에서 렌더링됩니다 -->
   </body>
 </html>
