--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       #qr-fixed {
         position: fixed;
         top: 10px;
-        right: 10px;
+        left: 20px;
         width: 100px;
         height: 100px;
         z-index: 9999;
